# chapter05/project/routes/api.php
@@ -13,9 +13,9 @@ use Illuminate\Http\Request;
 |
 */
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
-});
+Route::post('register', 'API\AuthController@register');
+Route::post('login', 'API\AuthController@login');
+Route::post('logout', 'API\AuthController@logout');
 
 Route::apiResources([
     'bikes' => 'API\BikeController',
@@ -23,3 +23,7 @@ Route::apiResources([
     'items' => 'API\ItemController',
     'bikes/{bike}/ratings' => 'API\RatingController'
 ]);
+
+Route::middleware('jwt.auth')->get('me', function(Request $request) {
+    return auth()->user();
+});
